@@ -2,6 +2,8 @@ package com.genai.java.spring.aiagent.tools.rag;
 
 import com.genai.java.spring.aiagent.config.data.AIAgentConfigData;
 import com.genai.java.spring.aiagent.tools.rag.records.RagArgs;
+import io.micrometer.observation.Observation;
+import io.micrometer.observation.ObservationRegistry;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.tool.annotation.Tool;
@@ -22,23 +24,31 @@ public class RagTools {
 
     private final VectorStore vectorStore;
     private final AIAgentConfigData.RagToolProperties ragToolProperties;
+    private final ObservationRegistry registry;
 
     public RagTools(@Qualifier("ragVectorStore") VectorStore vectorStore,
-                    AIAgentConfigData aiAgentConfigData) {
+                    AIAgentConfigData aiAgentConfigData,
+                    ObservationRegistry registry) {
         this.vectorStore = vectorStore;
         this.ragToolProperties = aiAgentConfigData.getRagTool();
+        this.registry = registry;
     }
 
     @Tool(name = "rag_query", description = "Query internal security policies and checklists with RAG; return concise quotes + citations.")
     Map<String, Object> query(RagArgs ragArgs) {
         try {
-            if (ragArgs == null) {
-                return Collections.emptyMap();
+            Observation toolCallObservation = Observation.start("rag_query", registry);
+            try (Observation.Scope scope = toolCallObservation.openScope()) {
+                if (ragArgs == null) {
+                    return Collections.emptyMap();
+                }
+                log.info("Calling rag_query tool with question: {} and topK: {}", ragArgs.question(), ragArgs.topK());
+                SearchRequest.Builder searchRequestBuilder = getSearchRequestBuilder(ragArgs, getTopK(ragArgs));
+                var hits = vectorStore.similaritySearch(searchRequestBuilder.build());
+                return Map.of("matches", getMatches(hits));
+            } finally {
+                toolCallObservation.stop();
             }
-            log.info("Calling rag_query tool with question: {} and topK: {}", ragArgs.question(), ragArgs.topK());
-            SearchRequest.Builder searchRequestBuilder = getSearchRequestBuilder(ragArgs, getTopK(ragArgs));
-            var hits = vectorStore.similaritySearch(searchRequestBuilder.build());
-            return Map.of("matches", getMatches(hits));
         } catch (Exception e) {
             return Map.of("error", "RAG_SEARCH_FAILED", "message", e.getMessage());
         }
